--- a/app/views/user/course_stat/_xtmpl_common_check.html.erb
+++ b/app/views/user/course_stat/_xtmpl_common_check.html.erb
@@ -135,7 +135,7 @@
 	</tr>
 </table>
 <p>
-※外語學分目前不會計算第二外語以及進修英文(因為無法得知是否通過中高級初試)<br>
-目前需請同學自行計算!
+註：外語學分目前不會計算第二外語及進修英文(因無法得知是否通過中高級初試)<br>
+需請同學自行計算！
 </p>
 </script>
