--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,43 +1,34 @@
 <%= javascript_include_tag "books", "data-turbolinks-track" => true %>
 
 <div id="main-container" class="container bg-white">
+	<br>
 	<div class="row">
-    <div class="col-md-7 col-md-offset-2">
-			<h1>我要賣書</h1>
-			<br>
-			<h4>Step1.選擇適用課程 - <span class="text-center" id="ct-id" data="<%=@ct.try(:id)%>"><%=@ct.try(:course_ch_name)%>/<%=@ct.try(:teacher_name)%></span></h4>
-			<div id="cts-search-form"></div>
-			<div class="row">
-				<div class="col-md-10">
-					<a id="show-all-li" class="hidden" href="javascript:void(0);" onclick="$('#cts-list').find('li').removeClass('hidden');$('#cts-list').find('.more').remove();">展開</a>
-					<ul id="cts-list"></ul>
-				</div>
-			</div>
-			<hr>
-			<h4>Step2.輸入書名以及內容</h4>
+    <div class="col-md-6 col-md-offset-3">
+	<h2><b><span class="glyphicon glyphicon-tree-deciduous" aria-hidden="true"></span> 我要賣書</b></h2>
+	<hr>
       <%= form_for @sale_book, :url => { :controller => 'books', :action => @sale_book.new_record? ? 'create' : "update" }, :html=>{class: "form-horizontal",multipart: true,id:"book_trade_info-form"} do |f| %>
         <div class="form-group">
-					<%=hidden_field_tag :cts_id_list %>
-          <label class="col-sm-2 control-label">書名</label>
-					<div class="col-sm-10">
-						<div class="input-group">
-							<%= f.text_field "book_name", :class => "form-control",required:"true",onBlur:"checkAndEnable();",placeholder:"利用搜尋來快速填入其他資訊!" %>
-							<div class="input-group-btn">
-								<%=button_tag "搜尋",id:"search-GoogleBook", class:"btn btn-success",onclick:"searchGoogleBook();return false;"%>
-							</div>
-						</div>
-					</div>	
+			<%=hidden_field_tag :cts_id_list %>
+          <label class="col-sm-2 control-label">書籍名稱</label>
+			<div class="col-sm-10">
+				<div class="input-group">
+					<%= f.text_field "book_name", :class => "form-control",required:"true",onBlur:"checkAndEnable();",placeholder:"利用搜尋可快速填入其他資訊" %>
+					<div class="input-group-btn">
+						<%=button_tag "搜尋",id:"search-GoogleBook", class:"btn btn-success",onclick:"searchGoogleBook();return false;"%>
+					</div>
+				</div>
+			</div>	
         </div>
-				<div class="form-group">
+		<div class="form-group">
           <label class="col-sm-2 control-label">作者</label>
-					<div class="col-sm-10">
-						<%=text_field_tag "book[authors]",@book.authors, class: "form-control",placeholder:"",required:"true" %>
-					</div>	
+			<div class="col-sm-10">
+				<%=text_field_tag "book[authors]",@book.authors, class: "form-control",placeholder:"",required:"true" %>
+			</div>	
         </div>
-				<div class="form-group">
+		<div class="form-group">
           <label class="col-sm-2 control-label"><%=link_to ("ISBN<sup>"+fa_icon("question")+"</sup>").html_safe,"javascript:void(0);",onclick:"showIsbnTip();"%></label>
 					<div class="col-sm-10">
-						<%=text_field_tag "book[isbn]",@book.isbn, class: "form-control integer-only",placeholder:"不需以'-'隔開,10碼或13碼皆可,例:9789861994192" %>
+						<%=text_field_tag "book[isbn]",@book.isbn, class: "form-control integer-only",placeholder:"10 碼或13 碼皆可，範例：9789861994192" %>
 						<%=hidden_field_tag "isbn_selected",@book.isbn  %>
 					</div>	
         </div>	
@@ -53,8 +44,11 @@
           <label class="col-sm-2 control-label" >圖片</label>
 					<div class="col-sm-10 col-xs-10">
 						<%= f.file_field "cover",class:"hidden",accept:"image/*" %>
-						<div id="image-container" onclick="showPreviewImg();" class="text-center clickable-hover" style="border:1px #eeeeee solid;min-height:170px;width:100%;">
-							點選以上傳圖片(需小於2MB)
+						<div id="image-container" onclick="showPreviewImg();" class="text-center clickable-hover" style="border:1px #eeeeee solid;min-height:130px;width:100%;">
+							<br>
+							<br>
+							<br>
+							點選上傳圖片(需小於2MB)
 							<%=@sale_book.new_record? ? "" : @sale_book.cover_image%>
 						</div>
 					</div>
@@ -66,56 +60,66 @@
 					</div>
         </div>
         <div class="form-group">
-          <label class="col-sm-2 control-label">書況及說明</label>
+          <label class="col-sm-2 control-label">書況說明</label>
 					<div class="col-sm-10">
-						<%= f.text_area "desc", :class => "form-control",required: "true",rows:"8" %>
+						<%= f.text_area "desc", :class => "form-control", required: "true", rows:"8" %>
 					</div>
         </div>
         <div class="form-group">
           <label class="col-sm-2 control-label">聯絡方式</label>
-					<div class="col-sm-10" style="margin-top:4px;">
-						<% if current_user.hasFb? %>
-							<div class="radio">
-								<label>
-								<%= f.radio_button :contact_way, "1" %> Facebook
-								</label>
-							</div>
+			<div class="col-sm-10" style="margin-top:2px;">
+			<% if current_user.hasFb? %>
+				<div class="radio">
+					<label>
+					<%= f.radio_button :contact_way, "1" %> Facebook
+					</label>
+				</div>
             <% end %>
             <% if current_user.hasGoogle? %>
-							<div class="radio">
-								<label>
-								<%= f.radio_button :contact_way, "2" %> Google
-								</label>
-							</div>
+				<div class="radio">
+					<label>
+						<%= f.radio_button :contact_way, "2" %> Google
+					</label>
+				</div>
             <% end %>
-						<div class="radio">
-							<label>
-								<%= f.radio_button :contact_way, "0" %> Email
-							</label>
-						</div>
-						
-					</div>
+				<div class="radio">
+					<label>
+						<%= f.radio_button :contact_way, "0" %> Email
+					</label>
+				</div>
+			</div>
         </div>
-				<% if false %>
-					<div class="form-group" id="status-edit">
-						<label class="col-sm-2 control-label">售出</label>
-						<div class="col-sm-10" style="margin-top:4px;">
-							<div class="radio">
-							<%= f.radio_button :status, "0" %>
-							<%= f.label :status_not_soldout, "否" %>
-							</div><div class="radio">
-							<%= f.radio_button :status, "1" %>
-							<%= f.label :status_soldout, "是" %>
-							</div class="radio">
-						</div>
-					</div>
-				<% end %>
         
-        <div class="col-md-12">
-          <%= f.submit "送出", class: "btn btn-lg btn-primary pull-right" %>
-        </div>      
+			<% if false %>
+				<div class="form-group" id="status-edit">
+					<label class="col-sm-2 control-label">售出</label>
+					<div class="col-sm-10" style="margin-top:2px;">
+						<div class="radio">
+						<%= f.radio_button :status, "0" %>
+						<%= f.label :status_not_soldout, "否" %>
+						</div><div class="radio">
+						<%= f.radio_button :status, "1" %>
+						<%= f.label :status_soldout, "是" %>
+						</div class="radio">
+					</div>
+				</div>
+			<% end %>
+
+			<h4><span class="text-center" id="ct-id" data="<%=@ct.try(:id)%>"><%=@ct.try(:course_ch_name)%> <%=@ct.try(:teacher_name)%></span></h4>
+			<div id="cts-search-form"></div>
+			<div class="row">
+				<div class="col-md-10">
+					<a id="show-all-li" class="hidden" href="javascript:void(0);" onclick="$('#cts-list').find('li').removeClass('hidden');$('#cts-list').find('.more').remove();">展開</a>
+					<ul id="cts-list"></ul>
+				</div>
+			</div>
+		<hr>
+		<div>
+			<%= f.submit "立即刊登", class: "btn btn-primary pull-right" %>
+		</div>
       <% end %>
     </div>
+    
   </div>
   </br>
 </div>
