--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -85,7 +85,7 @@
 				&nbsp;
 				<%=link_to fa_icon("refresh")+"  匯入成績", "/scores/import", class:"btn btn-warning btn-xs" %>
 				&nbsp;
-				<%=link_to fa_icon("check")+"  GPA 計算機", "/scores/gpa", class:"btn btn-warning btn-xs" %>
+				<%=link_to fa_icon("check")+"  GPA 計算機", "/scores/gpa", class:"btn btn-warning btn-xs",'data-no-turbolink'=>"true" %>
 				<p>&nbsp;</p>
 			</div>
 		</div>
