--- a/app/views/courses/_suggest_btns.html.erb
+++ b/app/views/courses/_suggest_btns.html.erb
@@ -1,5 +1,7 @@
-<table class="tabl col-md-offset-3" style="border:1px solid #ccc;">
-<tr class="" style="">
+<style>
+</style>
+<table class="col-sm-offset-5">
+<tr>
 	<td> 
 		<button id="sel-time-btn" data-content="空堂" class="btn btn-default pop-over" onclick="searchTimeSlot();">
 			<%=fa_icon "calendar 2x"%>
@@ -10,6 +12,7 @@
 			<%=fa_icon "graduation-cap 2x"%>
 		</button>
 	</td>
+	<!--
 	<td>
 		<button data-content="尚未開放" class="btn btn-default pop-over">
 			<%=fa_icon "heart-o 2x"%>
@@ -42,7 +45,7 @@
 		<button data-content="尚未開放" class="btn btn-default pop-over">
 			<%=fa_icon "cogs 2x"%>
 		</button>
-	</td>
+	</td>-->
 </tr>
 </table>
 <br>
