--- a/app/views/user/course_stat/_xtmpl_cm_check.html.erb
+++ b/app/views/user/course_stat/_xtmpl_cm_check.html.erb
@@ -50,7 +50,6 @@
 	
 </table>
 <p>
-註：計算錯誤可能原因<br>
-(1)系統缺少抵免/免修課程 (2)使用者未選擇該課所屬學程/領域
+註：計算錯誤可能原因如下 (1)系統缺少抵免/免修課程  (2)使用者未選擇該課所屬學程/領域
 </p>
 </script>
