add admin statistic's user-type of google

--- a/app/views/admin/statistics.html.erb
+++ b/app/views/admin/statistics.html.erb
@@ -184,7 +184,7 @@ $(function () {
       text: ''
     },
     xAxis: {
-      categories: ["E3","FB","E3+FB"]       
+      categories: ["E3","FB","Google","E3+FB","E3+Google","E3+FB+Google"]       
     },
     yAxis: {
       min: 0,
