--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,7 +55,9 @@
 				<li>
 					<a class="page-scroll" href="/courses/simulation" data-no-turbolink>模擬排課</a>
 				</li>
-				<!--
+				<!--<li>
+					<a class="page-scroll" href="/lab" data-no-turbolink>模擬Lab</a>
+				</li>
 				<li>
 					<a class="page-scroll" href="/user" data-no-turbolink>算學分</a>
 				</li>
