--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -36,7 +36,7 @@
 <div class="col-md-6">
 	<div class="row no-margin-right">
 		<div class="col-md-4" style="  text-align: center;">
-    		<img class="img-circle" src="<%= current_user.avatar_url %>">
+    		<img class="img-circle" src="<%= @user.avatar_url %>">
     		<p style="margin-top:5px;font-size:20px;"><b><%=@user.name%></b></p>
   		</div>
 		<div class="col-md-8 bg-white">
