course_map move files & show departments

--- a/app/views/course_maps/edit.html.erb
+++ b/app/views/course_maps/edit.html.erb
@@ -6,6 +6,7 @@
 <h3>課程介紹
 	<small>
 		<%=link_to '編輯', 'javascript:void(0);', :class=>'cm-edit-head'%>
+		<%=link_to '預覽', course_map_path(@course_map), :class=>'',:target=>"blank"%>
 	</small>
 </h3>
 <table class="table table-bordered">
