--- a/app/views/course_maps/manage/xtmpl/_course_group_list.html.erb
+++ b/app/views/course_maps/manage/xtmpl/_course_group_list.html.erb
@@ -41,7 +41,7 @@
 				%}
 				<tr class="row {%= color%}" list_id="{%= list.id%}">
 					<td class="col-md-3">{%=list.course_name %}</td>
-					<td class="col-md-2">{%=list.dep %}</td>
+					<td class="col-md-2">{%=list.dept_name %}</td>
 					<td class="col-md-2">{%=list.real_id %}</td>
 					<td class="col-md-1">{%=list.credit %}</td>
 					<td class="col-md-3">
